--- a/lib/l10n/intl_eo.arb
+++ b/lib/l10n/intl_eo.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-12-01 12:41:06.553946",
+  "@@last_modified": "2025-12-03 10:31:03.548316",
   "about": "Prio",
   "@about": {
     "type": "String",
@@ -11690,6 +11690,38 @@
     "placeholders": {}
   },
   "@announcementsChatDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "notStartedActivitiesTitle": "Malfermitaj sesioj ({num})",
+  "inProgressActivitiesTitle": "Okazas nun ({num})",
+  "completedActivitiesTitle": "Finiĝis ({num})",
+  "pickDifferentActivity": "Elektu alian aktivon",
+  "@notStartedActivitiesTitle": {
+    "type": "String",
+    "placeholders": {
+      "num": {
+        "type": "int"
+      }
+    }
+  },
+  "@inProgressActivitiesTitle": {
+    "type": "String",
+    "placeholders": {
+      "num": {
+        "type": "int"
+      }
+    }
+  },
+  "@completedActivitiesTitle": {
+    "type": "String",
+    "placeholders": {
+      "num": {
+        "type": "int"
+      }
+    }
+  },
+  "@pickDifferentActivity": {
     "type": "String",
     "placeholders": {}
   }
