--- a/lib/l10n/intl_et.arb
+++ b/lib/l10n/intl_et.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "et",
-  "@@last_modified": "2025-12-01 12:40:00.288987",
+  "@@last_modified": "2025-12-03 10:29:57.478134",
   "about": "Rakenduse teave",
   "@about": {
     "type": "String",
@@ -10872,6 +10872,38 @@
     "placeholders": {}
   },
   "@announcementsChatDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "notStartedActivitiesTitle": "Avatud seansid ({num})",
+  "inProgressActivitiesTitle": "Toimub praegu ({num})",
+  "completedActivitiesTitle": "Tehtud ({num})",
+  "pickDifferentActivity": "Vali teine tegevus",
+  "@notStartedActivitiesTitle": {
+    "type": "String",
+    "placeholders": {
+      "num": {
+        "type": "int"
+      }
+    }
+  },
+  "@inProgressActivitiesTitle": {
+    "type": "String",
+    "placeholders": {
+      "num": {
+        "type": "int"
+      }
+    }
+  },
+  "@completedActivitiesTitle": {
+    "type": "String",
+    "placeholders": {
+      "num": {
+        "type": "int"
+      }
+    }
+  },
+  "@pickDifferentActivity": {
     "type": "String",
     "placeholders": {}
   }
