--- a/lib/l10n/intl_hu.arb
+++ b/lib/l10n/intl_hu.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "hu",
-  "@@last_modified": "2025-12-01 12:39:34.911828",
+  "@@last_modified": "2025-12-03 10:29:32.057483",
   "about": "Névjegy",
   "@about": {
     "type": "String",
@@ -10602,6 +10602,38 @@
     "placeholders": {}
   },
   "@announcementsChatDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "notStartedActivitiesTitle": "Nyitott ülések ({num})",
+  "inProgressActivitiesTitle": "Jelenleg zajlik ({num})",
+  "completedActivitiesTitle": "Kész ({num})",
+  "pickDifferentActivity": "Válassz egy másik tevékenységet",
+  "@notStartedActivitiesTitle": {
+    "type": "String",
+    "placeholders": {
+      "num": {
+        "type": "int"
+      }
+    }
+  },
+  "@inProgressActivitiesTitle": {
+    "type": "String",
+    "placeholders": {
+      "num": {
+        "type": "int"
+      }
+    }
+  },
+  "@completedActivitiesTitle": {
+    "type": "String",
+    "placeholders": {
+      "num": {
+        "type": "int"
+      }
+    }
+  },
+  "@pickDifferentActivity": {
     "type": "String",
     "placeholders": {}
   }
