--- a/lib/l10n/intl_ko.arb
+++ b/lib/l10n/intl_ko.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-12-01 12:39:24.159740",
+  "@@last_modified": "2025-12-03 10:29:21.753863",
   "about": "소개",
   "@about": {
     "type": "String",
@@ -10709,6 +10709,38 @@
     "placeholders": {}
   },
   "@announcementsChatDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "notStartedActivitiesTitle": "열린 세션 ({num})",
+  "inProgressActivitiesTitle": "현재 진행 중 ({num})",
+  "completedActivitiesTitle": "완료됨 ({num})",
+  "pickDifferentActivity": "다른 활동 선택",
+  "@notStartedActivitiesTitle": {
+    "type": "String",
+    "placeholders": {
+      "num": {
+        "type": "int"
+      }
+    }
+  },
+  "@inProgressActivitiesTitle": {
+    "type": "String",
+    "placeholders": {
+      "num": {
+        "type": "int"
+      }
+    }
+  },
+  "@completedActivitiesTitle": {
+    "type": "String",
+    "placeholders": {
+      "num": {
+        "type": "int"
+      }
+    }
+  },
+  "@pickDifferentActivity": {
     "type": "String",
     "placeholders": {}
   }
