--- a/lib/l10n/intl_pl.arb
+++ b/lib/l10n/intl_pl.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "pl",
-  "@@last_modified": "2025-12-01 12:40:55.496589",
+  "@@last_modified": "2025-12-03 10:30:52.793986",
   "about": "O aplikacji",
   "@about": {
     "type": "String",
@@ -10601,6 +10601,38 @@
     "placeholders": {}
   },
   "@announcementsChatDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "notStartedActivitiesTitle": "Otwarte sesje ({num})",
+  "inProgressActivitiesTitle": "Trwa teraz ({num})",
+  "completedActivitiesTitle": "Zrobione ({num})",
+  "pickDifferentActivity": "Wybierz inną aktywność",
+  "@notStartedActivitiesTitle": {
+    "type": "String",
+    "placeholders": {
+      "num": {
+        "type": "int"
+      }
+    }
+  },
+  "@inProgressActivitiesTitle": {
+    "type": "String",
+    "placeholders": {
+      "num": {
+        "type": "int"
+      }
+    }
+  },
+  "@completedActivitiesTitle": {
+    "type": "String",
+    "placeholders": {
+      "num": {
+        "type": "int"
+      }
+    }
+  },
+  "@pickDifferentActivity": {
     "type": "String",
     "placeholders": {}
   }
