--- a/lib/l10n/intl_sk.arb
+++ b/lib/l10n/intl_sk.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "sk",
-  "@@last_modified": "2025-12-01 12:39:42.579953",
+  "@@last_modified": "2025-12-03 10:29:39.057337",
   "about": "O aplikácii",
   "@about": {
     "type": "String",
@@ -11685,6 +11685,38 @@
     "placeholders": {}
   },
   "@announcementsChatDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "notStartedActivitiesTitle": "Otvorené relácie ({num})",
+  "inProgressActivitiesTitle": "Prebieha teraz ({num})",
+  "completedActivitiesTitle": "Hotovo ({num})",
+  "pickDifferentActivity": "Vyberte inú aktivitu",
+  "@notStartedActivitiesTitle": {
+    "type": "String",
+    "placeholders": {
+      "num": {
+        "type": "int"
+      }
+    }
+  },
+  "@inProgressActivitiesTitle": {
+    "type": "String",
+    "placeholders": {
+      "num": {
+        "type": "int"
+      }
+    }
+  },
+  "@completedActivitiesTitle": {
+    "type": "String",
+    "placeholders": {
+      "num": {
+        "type": "int"
+      }
+    }
+  },
+  "@pickDifferentActivity": {
     "type": "String",
     "placeholders": {}
   }
