--- a/lib/l10n/intl_tr.arb
+++ b/lib/l10n/intl_tr.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "tr",
-  "@@last_modified": "2025-12-01 12:40:32.542590",
+  "@@last_modified": "2025-12-03 10:30:30.590666",
   "about": "Hakkında",
   "@about": {
     "type": "String",
@@ -10823,6 +10823,38 @@
     "placeholders": {}
   },
   "@announcementsChatDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "notStartedActivitiesTitle": "Açık oturumlar ({num})",
+  "inProgressActivitiesTitle": "Şu anda gerçekleşiyor ({num})",
+  "completedActivitiesTitle": "Tamamlandı ({num})",
+  "pickDifferentActivity": "Farklı bir etkinlik seç",
+  "@notStartedActivitiesTitle": {
+    "type": "String",
+    "placeholders": {
+      "num": {
+        "type": "int"
+      }
+    }
+  },
+  "@inProgressActivitiesTitle": {
+    "type": "String",
+    "placeholders": {
+      "num": {
+        "type": "int"
+      }
+    }
+  },
+  "@completedActivitiesTitle": {
+    "type": "String",
+    "placeholders": {
+      "num": {
+        "type": "int"
+      }
+    }
+  },
+  "@pickDifferentActivity": {
     "type": "String",
     "placeholders": {}
   }
