--- a/lib/l10n/intl_zh_Hant.arb
+++ b/lib/l10n/intl_zh_Hant.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-12-01 12:40:24.165409",
+  "@@last_modified": "2025-12-03 10:30:22.582679",
   "about": "關於",
   "@about": {
     "type": "String",
@@ -10599,6 +10599,38 @@
     "placeholders": {}
   },
   "@announcementsChatDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "notStartedActivitiesTitle": "開放的會議 ({num})",
+  "inProgressActivitiesTitle": "正在進行中 ({num})",
+  "completedActivitiesTitle": "已完成 ({num})",
+  "pickDifferentActivity": "選擇其他活動",
+  "@notStartedActivitiesTitle": {
+    "type": "String",
+    "placeholders": {
+      "num": {
+        "type": "int"
+      }
+    }
+  },
+  "@inProgressActivitiesTitle": {
+    "type": "String",
+    "placeholders": {
+      "num": {
+        "type": "int"
+      }
+    }
+  },
+  "@completedActivitiesTitle": {
+    "type": "String",
+    "placeholders": {
+      "num": {
+        "type": "int"
+      }
+    }
+  },
+  "@pickDifferentActivity": {
     "type": "String",
     "placeholders": {}
   }
